kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: physo-farsi-admin
  labels:
    app: physo-farsi-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: physo-farsi-admin
  template: # this is for creating a container
    metadata:
      labels:
        app: physo-farsi-admin
    spec:
      imagePullSecrets:
      - name: hub-hooshdev
      containers:
      - name: physo-farsi-admin
        image: hub.hooshdev.ir/physo/physo_farsi_admin
        ports:
        - containerPort:
        resources:
          requests:
            memory: "128M"
            cpu: "250m"
          limits:
            memory: "128M"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name:
spec:
  type: ClusterIP # other types: load-balancer, node-port, metal-lb. مشخص میکند که چه نوع آیپی خواهد گرفت.
  # نود پورت برای دسترسی به سرویس از طریق آی پی نود ها می باشد.
  # کلاستر آی پی برای دسترسی به سرویس از طریق آی پی های داخلی کلاستر می باشد.
  selector:
    app: physo-farsi-admin
  ports:
  - protocol: TCP
    port: 8282
    targetPort: 8282
