kubernetes/ingress_ticketing.yaml
apiVersion: networking.k8s.io/v1  # like docker compose version
kind: Ingress
metadata:
  name: jira-ticketing-ingress
  namespace: bots
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: #core
  ingressClassName: nginx
  rules:
  - host: ticketing.api.chat.parstechai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jira-ticketing-service # Change this to your actual service name if different.
            port:
              number: 2315
  tls:
  - hosts:
    - ticketing.api.chat.parstechai.com
    secretName: admin-ssl # The secret that will hold the certificate.
